--- a/Group8.Rmd
+++ b/Group8.Rmd
@@ -191,4 +191,6 @@ reghdfe sales price_adj pop pop16 income_adj, absorb(state year) // fixed effect
 
 **R Package:** [plm](https://cran.r-project.org/web/packages/plm/)
 
+**STATA Package: ** [reghdfe](http://scorreia.com/demo/reghdfe.html)
+
 **Notes: ** [Panel Data using R](https://www.princeton.edu/~otorres/Panel101R.pdf)
