--- a/Group8.Rmd
+++ b/Group8.Rmd
@@ -108,37 +108,72 @@ The varaibles used for regression and fixed effect model:
 
 ```{r R_code, eval=FALSE}
 
+# libraries: ------------------------------------------------------------------
 library(plm)
 library(car)
+library(lfe)
+```
 
+
+
+#### Data Manipulation
+
+Import the data:
+
+```{r R_code_1, eval=FALSE}
 # data: -----------------------------------------------------------------------
 data(Cigar)
+```
 
-ols = lm(sales ~ price, data = Cigar)
+Transform the variables:
+
+```{r R_code_2, eval=FALSE}
+# Adjust the price, and disposable income with cpi to 
+# get the dollar value in 1983
+Cigar = mutate(Cigar, 
+price_adj = (price/cpi)*100,
+income_adj = (ndi/cpi)*100)
+```
+
+
+#### OLS regression
+
+```{r R_code_3, eval=FALSE}
+# Run ordinary linear regression without fixed effect
+ols = lm(sales ~ price_adj + pop + pop16 + income_adj, data = Cigar)
 summary(ols)
+```
 
+#### Fixed Effects Models
+
+There are three ways to do with R, using the regular commands **lm**, the **felm** command in the lfe package, or **plm** in the plm package. In fact, they produce the same results. These commands help us to generate dummies variables for *state* and *year* and then run linear regression.
+
+```{r R_code_4, eval=FALSE}
 # Fixed effects using Least squares dummy variable model
-ols_fixed = lm(sales ~ price + factor(state) + factor(year) - 1, data = Cigar)
+ols_fixed = lm(sales ~ price_adj + 
+                 pop + pop16 + income_adj +
+                 factor(year) + factor(state), data = Cigar)
 summary(ols_fixed)
+```
 
-yhat = ols_fixed$fitted.values
-scatterplot(yhat ~ Cigar$price|Cigar$state, boxplots=FALSE, 
-            xlab="price", ylab="yhat", smooth=FALSE)
+```{r R_code_5, eval=FALSE}
+# Using lfe package to generate dummies variables for *state* and *year* and fit
+# a model 
+felm_fixed = felm(sales ~ price_adj + 
+                  pop + pop16 + income_adj |
+                  factor(year) + factor(state), data = Cigar)
+summary(felm_fixed)
+```
 
-abline(lm(Cigar$sales~Cigar$price),lwd=3, col="red")
-
+```{r R_code_6, eval=FALSE}
 # Use plm package to generate dummie variables for *state* and *year* and fit
 # a model
-plm_md = plm(sales ~ price - 1, data = Cigar,
-          index = c("state","year"), model = "within")
-summary(plm)
-fixef(plm)
+plm_md = plm(sales ~ price_adj + pop + pop16 + income_adj, 
+             data = Cigar,
+          index = c("year", "state"), model = "within", effect = "twoways")
+summary(plm_md)
 ```
 
-
-```{r}
-
-```
 
 
 ### Tutorial in SAS
