--- a/Group8.Rmd
+++ b/Group8.Rmd
@@ -76,7 +76,7 @@ Cigar[1:10,] %>%
 
 
 
-#### Variables: 
+####Variables: 
 
 The varaibles used for regression and fixed effect model:
 
@@ -104,41 +104,33 @@ The varaibles used for regression and fixed effect model:
 
 
 
-### Tutorial in R (plm)
-
-```{r R_code, eval=FALSE}
-
-# libraries: ------------------------------------------------------------------
-library(plm)
-library(car)
-library(lfe)
-```
-
+### Tutorial in R 
 
 
 #### Data Manipulation
 
 Import the data:
 
-```{r R_code_1, eval=FALSE}
-# data: -----------------------------------------------------------------------
+```{r R_code_1}
+# data: the dataset 'Cigar' is the 'plm' package
+library(plm)
 data(Cigar)
 ```
 
 Transform the variables:
 
-```{r R_code_2, eval=FALSE}
+```{r R_code_2,message=FALSE}
 # Adjust the price, and disposable income with cpi to 
 # get the dollar value in 1983
-Cigar = mutate(Cigar, 
-price_adj = (price/cpi)*100,
-income_adj = (ndi/cpi)*100)
+attach(Cigar)
+Cigar$price_adj=(price/cpi)*100
+Cigar$income_adj = (ndi/cpi)*100
 ```
 
 
 #### OLS regression
 
-```{r R_code_3, eval=FALSE}
+```{r R_code_3}
 # Run ordinary linear regression without fixed effect
 ols = lm(sales ~ price_adj + pop + pop16 + income_adj, data = Cigar)
 summary(ols)
@@ -146,34 +138,42 @@ summary(ols)
 
 #### Fixed Effects Models
 
-There are three ways to do with R, using the regular commands **lm**, the **felm** command in the lfe package, or **plm** in the plm package. In fact, they produce the same results. These commands help us to generate dummies variables for *state* and *year* and then run linear regression.
+There are three ways to do with R, using the regular funtions **lm**, the **felm** in the **lfe** package, or **plm** in the **plm** package. In fact, they produce the same results. 
 
-```{r R_code_4, eval=FALSE}
+The **lm** generates dummies variables for *state* and *year* and then run linear regression. However, the **felm** and **plm** will absorb individual fixed effects estimates. 
+
+If we just want to control for fix effect and only care about coefficients of interests, either **felm** and **plm** is a good choice. But if we want to know the effect of some specific groups, **lm** is preferred. 
+
+##### Basic R:
+
+In fact, the summary of **lm** will show individual fixed effects estimates for every year and every state. But for convenience, we only show the estimated coefficients of independent variables and first five estimated effects for years.
+
+```{r R_code_4}
 # Fixed effects using Least squares dummy variable model
-ols_fixed = lm(sales ~ price_adj + 
-                 pop + pop16 + income_adj +
-                 factor(year) + factor(state), data = Cigar)
-summary(ols_fixed)
+ols_fixed = lm(sales ~ price_adj + pop + pop16 + income_adj +factor(year) + factor(state), data = Cigar)
+summary(ols_fixed)$coefficients[1:10,]
 ```
 
-```{r R_code_5, eval=FALSE}
-# Using lfe package to generate dummies variables for *state* and *year* and fit
-# a model 
-felm_fixed = felm(sales ~ price_adj + 
-                  pop + pop16 + income_adj |
-                  factor(year) + factor(state), data = Cigar)
+
+##### Package **lfe**:
+
+```{r R_code_5,warning=FALSE,message=FALSE}
+# Using lfe package for *state* and *year* and fit a model 
+library(lfe)
+felm_fixed = felm(sales ~ price_adj + pop + pop16 + income_adj |factor(year) + factor(state), data = Cigar)
 summary(felm_fixed)
 ```
 
-```{r R_code_6, eval=FALSE}
-# Use plm package to generate dummie variables for *state* and *year* and fit
-# a model
-plm_md = plm(sales ~ price_adj + pop + pop16 + income_adj, 
-             data = Cigar,
+##### Package **plm**:
+
+
+```{r R_code_6, warning=FALSE,message=FALSE}
+# Use plm package tfor *state* and *year* and fit a model
+library(plm)
+plm_md = plm(sales ~ price_adj + pop + pop16 + income_adj, data = Cigar,
           index = c("year", "state"), model = "within", effect = "twoways")
 summary(plm_md)
 ```
-
 
 
 ### Tutorial in SAS
@@ -214,9 +214,17 @@ quit;
 
 #### Fixed Effects Models
 
-#### Use 'class':
+In SAS, the **glm** is to fit with fixed effects models. In **glm**, we can either use **class** or **absorb** to determine the fixed effects variables. 
 
-SAS will show the effect of every specific group (every year and every state), but we cannot show the whole output here. We only show the estimated coefficients of independent variables and first five estimated effects for years.
+If we want to see the fixed effects estimates for every *state* and every *year*, **class** will be the first choice. The **class** will automatically generate a set of dummy variables for each level of the variable *state* and *year*.
+
+It we only want to know the estimates of our interested independent variables, we can use **absorb** instead of **class**. But it can only absorb one variable at a time. And to use the **absorb**, we need to supress the intercept to avoid a dummy variable trap.
+
+We only show the estimated coefficients of independent variables and first five estimated effects for years.
+
+##### Use **class**:
+
+For convenience, we only show the estimated coefficients of independent variables and first five estimated effects for years. But in fact, in SAS, individual fixed effects estimates for every *state* and every *year* will be displayed. 
 
 ```{r sas_4, eval=FALSE}
 proc glm data=Cigar;
@@ -226,17 +234,18 @@ quit;
 ```
 ![](sas_fix.png)
 
-#### Use 'absorb':
+##### Use **absorb**:
 
-It we only want to know the estimates of our interests, we can use 'absorb' instead of 'class'. But for our example data, for some reason the output will not be showed.
+In SAS, as we absorb the variable *state*, only individual fixed effects estimates for every *year* will be displayed. And we only show the first five estimated effects for years.
 
 ```{r sas_5, eval=FALSE}
 proc glm data=Cigar;
- absorb year state; 
- model sales = price_adj pop pop16 income_adj / solution noint; run;
+ absorb state; 
+ class year;
+ model sales = price_adj pop pop16 income_adj year/ solution noint; run;
 quit;
 ```
-
+![](sas_abs.png)
 
 
 ### Tutorial in STATA
@@ -309,16 +318,22 @@ reghdfe sales price_adj pop pop16 income_adj, absorb(state year)
 ### Summary and Discussion
 
 
+#### Compare Fixed Effects Model to OLS 
+
+With fixed effect, the negative effect of *price* on *sales* is stronger in magnitude than the OLS, and the coefficient on *income* flips sign. It highlights the importance of controlling for fix effect.
+
+#### Absorption or Not
+
+When computing fixed effects models estimates, we should choose to absorb them or not. It depends on what our aim is. Absorption is computationally fast, and looks concisely, however, individual fixed effects estimates will not be showed. So to get individual fixed effects estimates, the preferred method is the way that will automatically generate a set of dummy variables for each level of the fixed effects variable.
+
 ### References
 
 **Wikipedia:** [Fixed effects model](https://en.wikipedia.org/wiki/Fixed_effects_model/)
 
 **R Package:** [plm](https://cran.r-project.org/web/packages/plm/)
 
-**R Package:** [lfe](https://cran.r-project.org/web/packages/lfe/lfe.pdf)
+**STATA Package: ** [reghdfe](http://scorreia.com/demo/reghdfe.html)
 
-**STATA Package:** [reghdfe](http://scorreia.com/demo/reghdfe.html)
-
-**Notes:** [Panel Data using R](https://www.princeton.edu/~otorres/Panel101R.pdf)
+**Notes: ** [Panel Data using R](https://www.princeton.edu/~otorres/Panel101R.pdf)
             
-**Notes:** [Fixed Effects in SAS](https://kelley.iu.edu/nstoffma/fe.html)
+**Notes: ** [Fixed Effects in SAS](https://kelley.iu.edu/nstoffma/fe.html)
