--- a/Group8.Rmd
+++ b/Group8.Rmd
@@ -59,6 +59,12 @@ $\mu_{it}$ is the error term.
 
 ### Overview
 
+In this tutorial, we use R, SAS and STATA to fit the fixed effect models and compared them with the ordinary least regression models. 
+
+The packages we use in R are basic R, **lfe** and **plm**. The package we use in STATA is **glm**, and two different commands, **class** or **absorb**, are both showed. In STATA, we use the packages **areg**, **xtreg**, and **reghdfe** to do the regression.
+
+The dataset **Cigar** is a built-in dataset in the **plm** package in R. It is clean enough for us to do the data analysis directly.
+
 ### Example Dataset: Cigar 
 
 The dataset **Cigar** is a panel of 46 observations from 1963 to 1992 of cigarette consuming.
